<resources>
    <string name="app_name">Notepad</string>
    <string name="this_is_my_first_note">This is my First Note</string>
    <string name="title_here">Title Here</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="addNote">AddNote</string>
    <string name="navigation_drawer">navigation_drawer</string>
    <string name="fab_content_desc">fab_content_desc</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="save">Save</string>
    <string name="add_note">Add Note</string>
    <string name="back">Back</string>
    <string name="undo">Undo</string>
    <string name="note_share">Note Share</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="note_info">NoteInfo</string>
    <string name="update">Update</string>
    <string name="categories">Categories</string>
    <string name="all_notes">All Notes\n</string>
    <string name="generals">Generals</string>
    <string name="help_and_feedback">Help And Feedback</string>
    <string name="share_us">Share Us</string>
    <string name="exit">Exit</string>
</resources>