<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/btnUpdate"
    android:title="@string/save"
    app:showAsAction="always"
    android:contentDescription="@string/update"
    android:icon="@drawable/baseline_save_24"
    />

    <group>
        <item
            android:id="@+id/btnShare"
            android:title="@string/share"
            app:showAsAction="always"
            android:contentDescription="@string/note_share"
            android:icon="@drawable/baseline_share_24"
            />
        <item
            android:id="@+id/btnDelete"
            android:title="@string/delete"
            app:showAsAction="withText|collapseActionView"
            android:contentDescription="@string/note_share"
            />

        <item
            android:id="@+id/btnNoteInfo"
            android:title="@string/note_info"
            app:showAsAction="withText|collapseActionView"
            android:contentDescription="@string/note_info"
            />
    </group>

</menu>